--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "alcalzone-shared": "^2.3.0",
     "xstate": "^4.11.0"
   },
-  "devDependencies": {
-    "@types/node": "^14.0.27"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
