Further reduce repro

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
         "module": "CommonJS",
         "moduleResolution": "node",
         "noEmit": true,
+        "noErrorTruncation": true,
     }
 }
